--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,4 +1,32 @@
-apiVersion: v1
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: scorecard-api-app
+spec:
+  selector:
+    matchLabels:
+      app: scorecard-api-app
+  replicas: 10
+  template:
+    metadata:
+      labels:
+        app: scorecard-api-app
+    spec:
+      containers:
+        - name: scorecard-api
+          image: scorecard-api:latest
+          resources:
+            requests:
+              memory: "500Mi"
+              cpu: "500m"
+            limits:
+              memory: "750Mi"
+              cpu: "1000m"
+          imagePullPolicy: Never
+          ports:
+            - containerPort: 8000
+---
+            apiVersion: v1
 kind: Service
 metadata:
   name: scorecard-api-service
@@ -10,25 +38,3 @@ spec:
       port: 8000
       targetPort: 8000
   type: LoadBalancer
-
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: scorecard-api-app
-spec:
-  selector:
-    matchLabels:
-      app: scorecard-api-app
-  replicas: 5
-  template:
-    metadata:
-      labels:
-        app: scorecard-api-app
-    spec:
-      containers:
-        - name: scorecard-api
-          image: scorecard-api:latest
-          imagePullPolicy: Never
-          ports:
-            - containerPort: 8000
