--- a/k8s/job/secret.yml
+++ b/k8s/job/secret.yml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: scorecard
 data:
-  DATABASE_USERNAME: YXBwCg==
-  DATABASE_PASSWORD: QXBwMTIzQGxlcwo=
-  DATABASE_HOST: cG9zdGdyZXMtc2VydmljZQo=
-  DATABASE_NAME: c2NvcmVjYXJkLWRiCg==
+  SCORECARD_USER: c2NvcmVjYXJkCg== #scorecard
+  SCORECARD_PASS: QXBwMTIzQGxlcwo= #App123@les
+  SCORECARD_HOST: MTkyLjE2OC4yLjE0NAo= #192.168.2.144
+  SCORECARD_DB: c2NvcmVjYXJkLWRiCg== #scorecard_db
