Worked out k8 config files, works on minikube now.  Next step is helm chart

--- a/k8s/job/secret.yml
+++ b/k8s/job/secret.yml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: scorecard
 data:
-  SCORECARD_USER: c2NvcmVjYXJkCg== #scorecard
-  SCORECARD_PASS: QXBwMTIzQGxlcwo= #App123@les
-  SCORECARD_HOST: MTkyLjE2OC4yLjE0NAo= #192.168.2.144
-  SCORECARD_DB: c2NvcmVjYXJkLWRiCg== #scorecard_db
+  SCORECARD_USER: c2NvcmVjYXJk #scorecard
+  SCORECARD_PASS: QXBwMTIzQGxlcw== #App123@les
+  SCORECARD_HOST: cG9zdGdyZXMtc2VydmljZQ== #postgres-service
+  SCORECARD_DB: c2NvcmVjYXJkX2Ri #scorecard_db
