--- a/k8s/postgres/postgres-secret.yml
+++ b/k8s/postgres/postgres-secret.yml
@@ -6,6 +6,6 @@ metadata:
   labels:
     app: scorecard
 data:
-  POSTGRES_DB: c2NvcmVjYXJkLWRiCg==
-  POSTGRES_USER: YXBwCg==
-  POSTGRES_PASSWORD: QXBwMTIzQGxlcwo= 
+  POSTGRES_DB: c2NvcmVjYXJkX2Ri #scorecard_db
+  POSTGRES_USER: c2NvcmVjYXJk #scorecard
+  POSTGRES_PASSWORD: QXBwMTIzQGxlcw== #App123@les
